kubernetes/kubernetes/OPA_rules/cpu_ram/constraintTemplate_limites.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8slimitresources
spec:
  crd:
    spec:
      names:
        kind: K8sLimitResources
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            cpu:
              type: string
            memory:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8slimitresources

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          limits := container.resources.limits
          
          # Check CPU limit
          cpu_limit := limits.cpu
          not allowed_cpu(cpu_limit)

          # Check Memory limit
          memory_limit := limits.memory
          not allowed_memory(memory_limit)

          msg := sprintf("CPU or Memory limits exceed the allowed values: cpu=%v, memory=%v", [cpu_limit, memory_limit])
        }

        allowed_cpu(cpu) {
          input.parameters.cpu == ""
        } {
          parse_quantity(cpu) <= parse_quantity(input.parameters.cpu)
        }

        allowed_memory(memory) {
          input.parameters.memory == ""
        } {
          parse_quantity(memory) <= parse_quantity(input.parameters.memory)
        }

        parse_quantity(quantity) = value {
          re_match("^[0-9]+m$", quantity)
          value := to_number(substring(quantity, 0, count(quantity)-1)) / 1000.0
        } {
          re_match("^[0-9]+$", quantity)
          value := to_number(quantity)
        } {
          re_match("^[0-9]+Mi$", quantity)
          value := to_number(substring(quantity, 0, count(quantity)-2))
        } {
          re_match("^[0-9]+Gi$", quantity)
          value := to_number(substring(quantity, 0, count(quantity)-2)) * 1024.0
        }
